--- a/index.html
+++ b/index.html
@@ -21,14 +21,11 @@
     <title>Hello world!</title>
   </head>
   <body>
-
       <div class="container">
           <div class="jumbotron">
               <h1 class="display-4">Chicago Cubs</h1>
               <p class="lead">The Cubs enter the 2020 season with new manager, David Ross. Opening Day is 62 days away!</p>
               <hr class="my-4">
-              <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-              <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
             </div>
           <div class="row">
               <div class="col-md-12">
@@ -69,7 +66,7 @@
                 </p>
               </div>
               <div class="col-md-5">
-                <h2>2020 Schedule</h2>
+                <h2>2020 Roster</h2>
                 <table class="table table-hover table-dark">
                     <tr>    
                         <td>Name</td>
@@ -95,11 +92,27 @@
                         <td>2B</td>
                         <td><i class="far fa-star"></i></td>
                     </tr>
+                    <tr>    
+                        <td>Jason Heyward</td>
+                        <td>CF</td>
+                        <td><i class="far fa-star"></i></td>
+                    </tr>
+                    <tr>    
+                        <td>Kyle Schwarber</td>
+                        <td>LF</td>
+                        <td><i class="far fa-star"></i></td>
+                    </tr>
+                    <tr>    
+                        <td>Albert Almora Jr.</td>
+                        <td>RF</td>
+                        <td><i class="far fa-star"></i></td>
+                    </tr>
                 </table>
                 <p>
                   <a class="btn btn-primary" href="https://www.mlb.com/cubs/schedule/2020-03">See Full Schedule</a>
               </p>
             </div>
+
 
 
     <!-- Optional JavaScript -->
